--- a/Changes
+++ b/Changes
@@ -1,5 +1,23 @@
 Revision history for Perl extension Image::Shoehorn::Gallery
 
+0.21	Fri Aug 02 2002
+	
+	- Now adds a breadcrumbs style menu at the top of each page. Woot!
+
+	- Added package MySAX::Breadcrumbs
+
+	- Added package Breadcrumbs
+
+	- Made sure to explicitly call 'close' on IO::File handles to prevent 'too many open files' errors
+
+	- Added check to account for possible 'default'-ness when comparing source file with scaled file
+
+	- Upped requirement in Makefile for Image::Shoehorn to 1.41
+
+	- Updated the default CSS
+
+	- Updated POD
+
 0.2	Wed Jul 31 2002
 
 	- Absolutely nothing in the TO DO list from 0.1
